@@ -1,6 +1,7 @@
 require 'active_shipping/shipping/carriers/bogus_carrier'
 require 'active_shipping/shipping/carriers/usps'
 require 'active_shipping/shipping/carriers/fedex'
+require 'active_shipping/shipping/carriers/shipwire'
 
 module ActiveMerchant
   module Shipping
