@@ -1,0 +1,4 @@
+<RateResponse>
+	<Status>Error</Status>
+	<ErrorMessage><![CDATA[Could not verify e-mail/password combination]]></ErrorMessage>
+</RateResponse>
